--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,64 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+# macOS system files
+.DS_Store
+Thumbs.db
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+out/
+.idea_modules/
+
+# Eclipse
+.project
+.classpath
+.settings/
+.target/
+
+# NetBeans
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+*.nb-gradle/
+
+# VSCode
+.vscode/
+.history/
+
+# Rider
+.idea/
+*.sln.iml
+
+# Emacs
+*~
+\#*\#
+
+# Vim
+*.swp
+*.swo
+*.swn
+*.un~
+
+# Sublime Text
+*.sublime-workspace
+*.sublime-project
+
+# Other JetBrains IDEs
+*.iml
+.idea/
+
+# Common build directories
+/build/
+out/
+target/
+dist/
+
+# Logs and temp files
+*.log
+*.tmp
+
